added javascript index

--- a/about.html
+++ b/about.html
@@ -35,6 +35,14 @@
         main {
             margin: 20px;
         }
+        section {
+            background-color: #1f1f1f;
+            padding: 20px;
+            border-radius: 10px;
+        }
+        section h2 {
+            color: #ff9800;
+        }
         footer {
             background-color: #1f1f1f;
             padding: 10px;
@@ -58,13 +66,16 @@
         <a href="contact.html">Contact</a>
     </nav>
     <main>
-        <section>
+        <section id="about-me">
             <h2>About Me</h2>
-            <p>Welcome to my personal blog! Here, I share my thoughts and experiences. Stay tuned for updates.</p>
+            <p>Welcome to my blog! I'm Cody, and I'm diving into the exciting world of data engineering and PowerBI administration. Though I'm relatively new to this field, with under a year of experience, I’m passionate about the problem-solving and strategic thinking it demands. Recently, I earned my DP-900 certification from Microsoft, and I'm gearing up to tackle the DP-600 certification. My journey has just begun, and I'm eager to keep expanding my knowledge and skills.</p>
+            <p>As a PowerBI administrator with data engineering responsibilities, I love turning data into actionable insights. The intricate details of data management and analysis fascinate me, and I’m driven by the potential to uncover meaningful patterns and solutions. Every project is a chance to dive deeper into data and refine my skills.</p>
+            <p>Outside of work, I enjoy playing strategy games and spending time outdoors with my amazing wife, Courtney. These activities provide a refreshing balance and enhance my analytical and strategic skills. My goal is simple: to keep learning and improving. Thank you for joining me on this journey. I look forward to sharing more insights and experiences with you.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 My Personal Blog. All rights reserved.</p>
+        <p>&copy; 2024. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
