--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
     <main>
         <section>
             <h2>Contact</h2>
-            <p>You can reach me at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+            <p>You can reach me at: <a href="mailto:Hicksc2013@gmail.com">Hicksc2013@gmail.com</a></p>
         </section>
     </main>
     <footer>
