--- a/post1.html
+++ b/post1.html
@@ -1,2 +1,2 @@
 <h3>Post Title 1</h3>
-<p>Welcome to my blog! I'm Cody, and I'm diving into the exciting world of data engineering and PowerBI administration. Though I'm relatively new to this field, with under a year of experience, I’m passionate about the problem-solving and strategic thinking it demands. Recently, I earned my DP-900 certification from Microsoft, and I'm gearing up to tackle the DP-600 certification. My journey has just begun, and I'm eager to keep expanding my knowledge and skills.</p>
+<p>Post1</p>
