--- a/blog.html
+++ b/blog.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Blog - My Personal Blog</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Contact</h1>
+        <h1>My Personal Blog</h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
-        <a href="blog.html">Blog</a>
+        <a href="contact.html">Contact</a>
     </nav>
     <main>
-        <section>
-            <h2>Contact</h2>
-            <p>You can reach me at: <a href="mailto:Hicksc2013@gmail.com">Hicksc2013@gmail.com</a></p>
-        </section>
+        <h2>All Blog Posts</h2>
+        <ul>
+            <li><a href="post1.html">Post Title 1</a></li>
+            <li><a href="post2.html">Post Title 2</a></li>
+            <!-- Add more posts as needed -->
+        </ul>
     </main>
     <footer>
         <p>&copy; 2024 My Personal Blog. All rights reserved.</p>
