--- a/post1.html
+++ b/post1.html
@@ -1,2 +1,27 @@
-<h3>Post Title 1</h3>
-<p>Post1</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Post Title 2 - My Personal Blog</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>My Personal Blog</h1>
+    </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="blog.html">Blog</a>
+        <a href="about.html">About Me</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    <main>
+        <h2>Post Title 2</h2>
+        <p>As a PowerBI administrator with data engineering responsibilities, I love turning data into actionable insights. The intricate details of data management and analysis fascinate me, and I’m driven by the potential to uncover meaningful patterns and solutions. Every project is a chance to dive deeper into data and refine my skills.</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 My Personal Blog. All rights reserved.</p>
+    </footer>
+</body>
+</html>
