--- a/post2.html
+++ b/post2.html
@@ -1,2 +1,27 @@
-<h3>Post Title 1</h3>
-<p>Post2</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Post Title 1 - My Personal Blog</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>My Personal Blog</h1>
+    </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="blog.html">Blog</a>
+        <a href="about.html">About Me</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    <main>
+        <h2>Post Title 1</h2>
+        <p>Welcome to my blog! I'm Cody, and I'm diving into the exciting world of data engineering and PowerBI administration. Though I'm relatively new to this field, with under a year of experience, I’m passionate about the problem-solving and strategic thinking it demands. Recently, I earned my DP-900 certification from Microsoft, and I'm gearing up to tackle the DP-600 certification. My journey has just begun, and I'm eager to keep expanding my knowledge and skills.</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 My Personal Blog. All rights reserved.</p>
+    </footer>
+</body>
+</html>
