--- a/post2.html
+++ b/post2.html
@@ -18,7 +18,7 @@
     </nav>
     <main>
         <h2>Post Title 2</h2>
-        <p>Welcome to my blog! I'm Cody, and I'm diving into the exciting world of data engineering and PowerBI administration. Though I'm relatively new to this field, with under a year of experience, I’m passionate about the problem-solving and strategic thinking it demands. Recently, I earned my DP-900 certification from Microsoft, and I'm gearing up to tackle the DP-600 certification. My journey has just begun, and I'm eager to keep expanding my knowledge and skills.</p>
+        <p><insert blog post here (when you have a good idea) ></p>
     </main>
     <footer>
         <p>&copy; 2024 My Personal Blog. All rights reserved.</p>
