--- a/post2.html
+++ b/post2.html
@@ -18,7 +18,7 @@
     </nav>
     <main>
         <h2>Post Title 2</h2>
-        <p><insert blog post here (when you have a good idea) ></p>
+        <p>insert blog post here (when you have a good idea)</p>
     </main>
     <footer>
         <p>&copy; 2024 My Personal Blog. All rights reserved.</p>
