adding some content

--- a/post1.html
+++ b/post1.html
@@ -18,7 +18,12 @@
     </nav>
     <main>
         <h2>Post Title 1</h2>
-        <p></p>
+        <p>
+            Hi, as youve guessed by taking a look around,
+            but this is the first blog post.
+            
+        
+        </p>
     </main>
     <footer>
         <p>&copy; 2024 My Personal Blog. All rights reserved.</p>
