--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <ul class="main-nav">
         <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="3card.html">Test</a></li>
       </ul>
     </div>
   </nav>
