--- a/index.html
+++ b/index.html
@@ -1,78 +1,55 @@
-<!-- ============================================ -->
-<!--                Meet The Team                 -->
-<!-- ============================================ -->
-
-<section id="blog-986">
-    <div class="cs-container">
-        <div class="cs-content">
-            <div class="cs-flex">
-                <span class="cs-topper">News & Articles</span>
-                <h2 class="cs-title">Directly from The Latest News and Articles</h2>
-            </div>
-            <a href="" class="cs-button-solid">View All</a>
-        </div>
-        <ul class="cs-card-group">
-            <li class="cs-item">
-                <picture class="cs-picture">
-                    <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/salon10.jpg">
-                    <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/salon10.jpg">
-                    <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/salon10.jpg" alt="stylist" width="413" height="480">
-                </picture>
-                <div class="cs-info">
-                    <span class="cs-date">
-                        <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/calendar.svg" alt="stylist" width="20" height="20">
-                        07 Sep, 2022
-                    </span>
-                    <h3 class="cs-h3">Healthy hair tips: How to keep your locks looking luscious</h3>
-                    <span class="cs-desc">
-                        How to style without causing damage, and tips on maintaining a healthy diet for healt...
-                    </span>
-                    <a href="" class="cs-link">Read More</a>
-                </div>
-            </li>
-            <li class="cs-item">
-                <picture class="cs-picture">
-                    <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/salon11.jpg">
-                    <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/salon11.jpg">
-                    <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/salon11.jpg" alt="stylist" width="413" height="480">
-                </picture>
-                <div class="cs-info">
-                    <span class="cs-date">
-                        <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/calendar.svg" alt="stylist" width="20" height="20">
-                        07 Sep, 2022
-                    </span>
-                    <h3 class="cs-h3">Healthy hair tips: How to keep your locks looking luscious</h3>
-                    <span class="cs-desc">
-                        How to style without causing damage, and tips on maintaining a healthy diet for healt...
-                    </span>
-                    <a href="" class="cs-link">Read More</a>
-                </div>
-            </li>
-            <li class="cs-item">
-                <picture class="cs-picture">
-                    <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/salon12.jpg">
-                    <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/salon12.jpg">
-                    <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/salon12.jpg" alt="stylist" width="413" height="480">
-                </picture>
-                <div class="cs-info">
-                    <span class="cs-date">
-                        <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/calendar.svg" alt="stylist" width="20" height="20">
-                        07 Sep, 2022
-                    </span>
-                    <h3 class="cs-h3">Healthy hair tips: How to keep your locks looking luscious</h3>
-                    <span class="cs-desc">
-                        How to style without causing damage, and tips on maintaining a healthy diet for healt...
-                    </span>
-                    <a href="" class="cs-link">Read More</a>
-                </div>
-            </li>
-        </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Cody's personal blog on data engineering and Power BI administration." />
+  <title>Cody's Data Engineering Blog</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <!--==============================
+  HEADER
+  ===============================-->
+  <header>
+    <div class="container">
+      <h2><a href="index.html">Cody's Data Engineering Blog</a></h1>
     </div>
-</section>
-                                
+  </header>
+
+
+  <!--==============================
+  MAIN CONTENT
+  ===============================-->
+  <main class="container">
+    <!-- Sidebar with recent posts -->
+
+    <!-- Main “welcome” section or featured article -->
+    <section>
+      <article>
+        <h2>Welcome to My Blog!</h2>
+        <p>
+          Hello! I’m <strong>Cody Hicks</strong>, a data engineer specializing in data engineering and Power BI administration. Here, I’ll share tutorials, project highlights, and tips for optimizing your data workflows.
+        </p>
+        <p>Stay tuned for updates on:</p>
+        <ul>
+          <li>
+            <a href="automating-refresh.html">
+              Automating dataset refresh and monitoring in Microsoft Fabric
+            </a>
+          </li>
+        </ul>
+      </article>
+    </section>
+  </main>
+
+  <!--==============================
+  FOOTER
+  ===============================-->
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Cody Hicks. All rights reserved.</p>
+    </div>
+  </footer>
+</body>
+</html>
