--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Cody's personal blog on data engineering and Power BI administration." />
+  <meta name="description" content="Between Blunders and Breakthroughs" />
   <title>Cody's Data Engineering Blog</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -13,7 +13,7 @@
   ===============================-->
   <header>
     <div class="container">
-      <h2><a href="index.html">Cody's Data Engineering Blog</a></h1>
+      <h2><a href="index.html">Between Blunders and Breakthroughs</a></h1>
     </div>
   </header>
 
@@ -27,11 +27,12 @@
     <!-- Main “welcome” section or featured article -->
     <section>
       <article>
-        <h2>Welcome to My Blog!</h2>
+        <h3>Welcome to My Blog!</h3>
         <p>
-          Hello! I’m <strong>Cody Hicks</strong>, a data engineer specializing in data engineering and Power BI administration. Here, I’ll share tutorials, project highlights, and tips for optimizing your data workflows.
-        </p>
-        <p>Stay tuned for updates on:</p>
+        Hello! I’m <strong>Cody Hicks</strong>,
+        a data engineer specializing in Fabric and Power BI.
+        I’ll share walkthroughs, project highlights, and tips. 
+        Stay tuned for updates on:</p>
         <ul>
           <li>
             <a href="automating-refresh.html">
