minor things, adding template file and adding a base file for the automating refresh html

--- a/temp.html
+++ b/temp.html
@@ -27,7 +27,7 @@
     <!-- Main “welcome” section or featured article -->
     <section>
       <article>
-        <h3>Automating dataset refreshes and monitoring in Microsoft Fabric</h3>
+        <h3>Name</h3>
         <p>
             [Placeholder]
         </p>
